[ADD] Cloud Config and API routing

--- a/forms-site.conf
+++ b/forms-site.conf
@@ -1,8 +1,16 @@
 <VirtualHost *:80>
-<Directory /home/bryan/forms-site/>
-	Options Indexes FollowSymLinks
-	AllowOverride None
-	Require all granted
-</Directory>
-DocumentRoot /home/bryan/forms-site
+
+	DocumentRoot /ruta/al/directorio
+
+	<Directory /ruta/al/directorio>
+		Options Indexes FollowSymLinks
+		AllowOverride All
+		Require all granted
+		Allow from all
+	</Directory>
+
+
+ErrorLog ${APACHE_LOG_DIR}/error.log
+CustomLog ${APACHE_LOG_DIR}/access.log combined
+
 </VirtualHost>
